refactor(metadata): simplify BabelioBookParser stream usage
- Replace double-pass stream in fetchByTerm() with a single filtered list
- Modernize collect(Collectors.toList()) to .toList() (3 occurrences)